--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Form</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- FontAwesome kit's code here -->
+    <script src="https://kit.fontawesome.com/d027480c9c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -18,4 +20,4 @@
         </div>
     </form>
 </body>
-</html>
+</html> 
