HTML template setup complete & some basic styling added

--- a/index.html
+++ b/index.html
@@ -11,13 +11,49 @@
     <script src="https://kit.fontawesome.com/d027480c9c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+<h3>entry /log-in form</h3>
     <!-- Entry / log-in form-->
     <form id="entry-form"class="forms" action="">
-        <div class="form-control">
+        <!-- Username entry -->
+        <div class="form-control">            
             <label for="username">username</label>
             <input type="text" name="username" id="username" placeholder="enter your username">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>error message</small>        
+        </div>
+        <!-- E-mail entry-->
+        <div class="form-control">            
+            <label for="username">username</label>
+            <input type="text" name="email"id="email" placeholder="enter your email">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>error message</small>        
+        </div>
+        <!-- Password entry -->
+        <div class="form-control">            
+            <label for="username">password</label>
+            <input type="text" name="password" id="password" placeholder="enter your username">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>error message</small>        
+        </div>
+        
+        <!-- Submit button -->
+        <div class="form-control">
+            <button type="submit">log in</button>
         </div>
     </form>
 </body>
-</html> 
+</html>
+
+<!-- For creating an account -->
+<!-- Password check entry 
+        <div class="form-control">            
+            <label for="username">password check</label>
+            <input type="text" name="password-check" id="password-check" placeholder="enter your username">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>error message</small>        
+        </div>
+-->
