Password placeholder updated in index.html & form control styling seperated into own section in CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="https://kit.fontawesome.com/d027480c9c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<h3>entry /log-in form</h3>
+<header>
+    <h3>entry /log-in form</h3>
+</header>
     <!-- Entry / log-in form-->
     <form id="entry-form"class="forms" action="">
         <!-- Username entry -->
@@ -33,7 +35,7 @@
         <!-- Password entry -->
         <div class="form-control">            
             <label for="username">password</label>
-            <input type="text" name="password" id="password" placeholder="enter your username">
+            <input type="text" name="password" id="password" placeholder="enter your password">
             <i class="fas fa-check-circle"></i>
             <i class="fas fa-exclamation-circle"></i>
             <small>error message</small>        
